--- a/calculator-page.html
+++ b/calculator-page.html
@@ -9,11 +9,28 @@
     <link rel="stylesheet" href="/styles.css" />
     <script src="/calculator-script.js"></script>
   </head>
-  <body>
-    <input type="radio" id="imperial" name="unit_mode" value="imperial" />
-    <label for="imperial">Imperial</label>
-    <input type="radio" id="metric" name="unit_mode" value="metric" />
-    <label for="metric">Metric</label>
+  <body onload="onLoadFunction()">
+    <div class="unit-selector-container">
+      <input
+        type="radio"
+        id="imperial"
+        name="unit_mode"
+        value="imperial"
+        onclick="imperialChecked()"
+        checked
+        style="display: none"
+      />
+      <label for="imperial" id="imperialLabel">Imperial</label> |
+      <input
+        type="radio"
+        id="metric"
+        name="unit_mode"
+        value="metric"
+        onclick="metricChecked()"
+        style="display: none"
+      />
+      <label for="metric" id="metricLabel">Metric</label>
+    </div>
     <form action="">
       <div class="input-container">
         <span>Input Weight</span>
@@ -21,8 +38,7 @@
           type="number"
           id="weight"
           min="0"
-          placeholder="pounds"
-          value="0"
+          placeholder="Pounds"
           onfocus="this.value=''"
         />
       </div>
@@ -32,8 +48,7 @@
           type="number"
           id="height"
           min="0"
-          placeholder="feet"
-          value="0"
+          placeholder="Inches"
           onfocus="this.value=''"
         />
       </div>
@@ -56,7 +71,5 @@
         </div>
       </div>
     </form>
-
-    ovmdf
   </body>
 </html>
