--- a/HTML/Dashboard.html
+++ b/HTML/Dashboard.html
@@ -23,32 +23,38 @@
 
     <main>
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                <img class="d-block w-100" src="../Asset/312974.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                <img class="d-block w-100" src="../Asset/312974.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                <img class="d-block w-100" src="../Asset/312974.jpg" alt="Third slide">
-                </div>
+        <div class="profile-info container">
+            <h1>Nama Pengguna</h1>
+        </div>
+
+        <hr>
+
+        <div class="custom-jumbotron">
+            <div class="bmi-explanation container">
+                <h3>What is BMI?</h3>
+                <h5>
+                    Body mass index (BMI) is a value derived from the mass (weight) and height of a person. The BMI is defined as the body mass divided by the square of the body height, and is expressed in units of kg/m2, resulting from mass in kilograms and height in metres.
+                    <br>
+                    <br>
+                    The BMI may be determined using a table[a] or chart which displays BMI as a function of mass and height using contour lines or colours for different BMI categories, and which may use other units of measurement (converted to metric units for the calculation).
+                </h4>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+        </div>
+
+        <div class="menu container">
+            <div class="menu-item">
+                <a href="">
+                    <img src="../Asset/BMI-Chart.jpg" alt="menu-img">
+                    <h2>BMI Calculator</h2>
+                </a>
             </div>
+            <div class="menu-item">
+                <a href="">
+                    <img src="../Asset/F1000002.JPG" alt="menu-img">
+                    <h2>BMI Advisory</h2>
+                </a>
+            </div>
+        </div> 
 
     </main>
 
@@ -57,7 +63,6 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-
 
     <script src="../JS/bootstrap-4.5.3-dist/js/bootstrap.bundle.min.js"></script>
     
