--- a/HTML/Dashboard.html
+++ b/HTML/Dashboard.html
@@ -41,6 +41,10 @@
             </div>
         </div>
 
+        <div class="dashboard">
+            
+        </div>
+
         <div class="menu container">
             <div class="menu-item">
                 <a href="">
@@ -59,7 +63,15 @@
     </main>
 
     <footer>
-
+        <h1>Ceritanya ini tugas buat webdes.</h1>
+        <h1>Dan ceritanya ini anggota2nya:</h1>
+        <ul>
+            <li>Reiner</li>
+            <li>Tiffany</li>
+            <li>Riksen</li>
+            <li>Nabeel</li>
+            <li>Gazic</li>
+        </ul>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
